Fix: Uncomment Overflow hidden

--- a/src/Index.module.css
+++ b/src/Index.module.css
@@ -10,7 +10,7 @@ body {
 
 html {
   scroll-behavior: smooth;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 code {
